<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B5829"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ManaTracker">

    <TextView
        android:textColor="#edd8c4"
        android:id="@+id/mana_tracker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="35sp"
        android:text="@string/mana_tracker_title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f0f000">

            <Button
                android:id="@+id/plains_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:padding="25sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:text="@string/plains"

                android:backgroundTint="#fffe37"
                tools:ignore="UnusedAttribute"
                android:onClick="onPlainsClick"/>

            <EditText
                android:id="@+id/white_edittext_mana_tracker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="50sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:inputType="number"
                android:text="@string/zero"
                tools:ignore="Autofill,LabelFor"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2EA2E1">

            <Button
                android:id="@+id/island_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:padding="25sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:text="@string/island"

                android:backgroundTint="#6bbde9"
                tools:ignore="UnusedAttribute"
                android:onClick="onIslandClick"/>

            <EditText
                android:id="@+id/blue_edittext_mana_tracker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="50sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:inputType="number"
                android:text="@string/zero"
                tools:ignore="Autofill,LabelFor"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#707070">

            <Button
                android:id="@+id/black_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:padding="25sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:text="@string/swamp"

                android:backgroundTint="#939393"
                tools:ignore="UnusedAttribute"
                android:onClick="onSwampClick"/>

            <EditText
                android:id="@+id/black_edittext_mana_tracker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="50sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:inputType="number"
                android:text="@string/zero"
                tools:ignore="Autofill,LabelFor"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF3333">

            <Button
                android:id="@+id/mountain_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:padding="25sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:text="@string/mountain"

                android:backgroundTint="#FF1717"
                tools:ignore="UnusedAttribute"
                android:onClick="onMountainClick"/>

            <EditText
                android:id="@+id/red_edittext_mana_tracker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="50sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:inputType="number"
                android:text="@string/zero"
                tools:ignore="Autofill,LabelFor"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66CC66">

            <Button
                android:id="@+id/forest_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:padding="25sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:text="@string/forest"

                android:backgroundTint="#56aa56"
                tools:ignore="UnusedAttribute"
                android:onClick="onForestClick"/>

            <EditText
                android:id="@+id/green_edittext_mana_tracker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="50sp"
                android:paddingStart="50sp"
                android:paddingEnd="50sp"
                android:inputType="number"
                android:text="@string/zero"
                tools:ignore="Autofill,LabelFor"/>
        </TableRow>

    </TableLayout>
</LinearLayout>